--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
             <img class="footer__logo" src="img/logo.png" alt="Kalinka Group" width="175" height="137">
           </a>
         </div>
-        <div>
+        <div class="footer__inner">
           <p class="footer__desc">Запишитесь на&nbsp;просмотр или получите больше информации по&nbsp;объекту, позвонив/написав нам</p>
           <p><a class="footer__link" href="mailto:kalinka@kalinka-realty.ru">
-            <img src="img/email.png" alt="">
-            kalinka@kalinka-realty.ru
+            <span><img src="img/email.png" alt=""></span>
+            <span> kalinka@kalinka-realty.ru</span>
           </a></p>
           <p><a class="footer__link" href="tel:+7 495 725-25-81">
-            <img src="img/phone.png" alt="">
-            +7 495 725-25-81</a>
-          </p>
+            <span><img src="img/phone.png" alt=""></span>
+            <span>+7 495 725-25-81</span>
+          </a></p>
         </div>
       </div>
     </div>
@@ -148,16 +148,16 @@
             <img class="footer__logo" src="img/logo.png" alt="Kalinka Group" width="175" height="137">
           </a>
         </div>
-        <div>
+        <div class="footer__inner">
           <p class="footer__desc">Запишитесь на&nbsp;просмотр или получите больше информации по&nbsp;объекту, позвонив/написав нам</p>
           <p><a class="footer__link" href="mailto:kalinka@kalinka-realty.ru">
-            <img src="img/email.png" alt="">
-            kalinka@kalinka-realty.ru
+            <span><img src="img/email.png" alt=""></span>
+            <span> kalinka@kalinka-realty.ru</span>
           </a></p>
           <p><a class="footer__link" href="tel:+7 495 725-25-81">
-            <img src="img/phone.png" alt="">
-            +7 495 725-25-81</a>
-          </p>
+            <span><img src="img/phone.png" alt=""></span>
+            <span>+7 495 725-25-81</span>
+          </a></p>
         </div>
       </div>
     </div>
@@ -183,16 +183,16 @@
             <img class="footer__logo" src="img/logo.png" alt="Kalinka Group" width="175" height="137">
           </a>
         </div>
-        <div>
+        <div class="footer__inner">
           <p class="footer__desc">Запишитесь на&nbsp;просмотр или получите больше информации по&nbsp;объекту, позвонив/написав нам</p>
           <p><a class="footer__link" href="mailto:kalinka@kalinka-realty.ru">
-            <img src="img/email.png" alt="">
-            kalinka@kalinka-realty.ru
+            <span><img src="img/email.png" alt=""></span>
+            <span> kalinka@kalinka-realty.ru</span>
           </a></p>
           <p><a class="footer__link" href="tel:+7 495 725-25-81">
-            <img src="img/phone.png" alt="">
-            +7 495 725-25-81</a>
-          </p>
+            <span><img src="img/phone.png" alt=""></span>
+            <span>+7 495 725-25-81</span>
+          </a></p>
         </div>
       </div>
     </div>
@@ -282,16 +282,16 @@
             <img class="footer__logo" src="img/logo.png" alt="Kalinka Group" width="175" height="137">
           </a>
         </div>
-        <div>
+        <div class="footer__inner">
           <p class="footer__desc">Запишитесь на&nbsp;просмотр или получите больше информации по&nbsp;объекту, позвонив/написав нам</p>
           <p><a class="footer__link" href="mailto:kalinka@kalinka-realty.ru">
-            <img src="img/email.png" alt="">
-            kalinka@kalinka-realty.ru
+            <span><img src="img/email.png" alt=""></span>
+            <span> kalinka@kalinka-realty.ru</span>
           </a></p>
           <p><a class="footer__link" href="tel:+7 495 725-25-81">
-            <img src="img/phone.png" alt="">
-            +7 495 725-25-81</a>
-          </p>
+            <span><img src="img/phone.png" alt=""></span>
+            <span>+7 495 725-25-81</span>
+          </a></p>
         </div>
       </div>
     </div>
@@ -313,16 +313,16 @@
             <img class="footer__logo" src="img/logo.png" alt="Kalinka Group" width="175" height="137">
           </a>
         </div>
-        <div>
+        <div class="footer__inner">
           <p class="footer__desc">Запишитесь на&nbsp;просмотр или получите больше информации по&nbsp;объекту, позвонив/написав нам</p>
           <p><a class="footer__link" href="mailto:kalinka@kalinka-realty.ru">
-            <img src="img/email.png" alt="">
-            kalinka@kalinka-realty.ru
+            <span><img src="img/email.png" alt=""></span>
+            <span> kalinka@kalinka-realty.ru</span>
           </a></p>
           <p><a class="footer__link" href="tel:+7 495 725-25-81">
-            <img src="img/phone.png" alt="">
-            +7 495 725-25-81</a>
-          </p>
+            <span><img src="img/phone.png" alt=""></span>
+            <span>+7 495 725-25-81</span>
+          </a></p>
         </div>
       </div>
     </div>
