--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
         <address class="page-section__address">Россия, Москва, Даниловский Вал ул., д. 1А</address>
         <p class="page-section__address-detail"><b>Район:</b> Даниловский <b>Метро:</b> «Тульская»</p>
         <div class="page-section__about">
-          <div class="page-section__about-item">
-            <p>Площадь:</p>
-            <p>от <b> 33.8-102.8 м</b><sup>2</sup></p>
-          </div>
-          <div class="page-section__about-item">
-            <p>Стоимость:</p>
-            <p>от <b>15,91 млн ₽</b> до <b>47,58 млн ₽</b></p>
-            <p>от <b>444 875 млн</b>  до <b>млн ₽/м<sup>2</sup></b></p>
+          <div class="page-section__about-row">
+            <div class="page-section__about-item">
+              <p>Площадь:</p>
+              <p>от <b> 33.8-102.8 м</b><sup>2</sup></p>
+            </div>
+            <div class="page-section__about-item">
+              <p>Стоимость:</p>
+              <p>от <b>15,91 млн ₽</b> до <b>47,58 млн ₽</b></p>
+              <p>от <b>444 875 млн</b>  до <b>млн ₽/м<sup>2</sup></b></p>
+            </div>
           </div>
         </div>
         <img class="page-section__map" src="img/map.jpg" alt="Россия, Москва, Даниловский Вал ул., д. 1А">
