--- a/index.html
+++ b/index.html
@@ -74,44 +74,84 @@
           <div class="page-section__column">
             <ul class="page-section__advantages">
               <li>
-                <img src="img/icon-lg1.png" alt="">
-                <p>Этажность: 13</p>
+                <div class="page-section__advantages-cell">
+                  <img src="img/icon-lg1.png" alt="">
+                </div>
+                <div class="page-section__advantages-cell">
+                  <p>Этажность: 13</p>
+                </div>
               </li>
               <li>
-                <img src="img/icon-lg2.png" alt="">
-                <p>Кол-во корпусов: 1</p>
+                <div class="page-section__advantages-cell">
+                  <img src="img/icon-lg2.png" alt="">
+                </div>
+                <div class="page-section__advantages-cell">
+                  <p>Кол-во корпусов: 1</p>
+                </div>
               </li>
               <li>
-                <img src="img/icon-lg3.png" alt="">
-                <p>Тип дома: <b>Монолитно-кирпичный</b></p>
+                <div class="page-section__advantages-cell">
+                  <img src="img/icon-lg3.png" alt="">
+                </div>
+                <div class="page-section__advantages-cell">
+                  <p>Тип дома: <b>Монолитно-кирпичный</b></p>
+                </div>
               </li>
               <li>
-                <img src="img/icon-lg4.png" alt="">
-                <p>Высота потолков: <b>3,0 м</b></p>
+                <div class="page-section__advantages-cell">
+                  <img src="img/icon-lg4.png" alt="">
+                </div>
+                <div class="page-section__advantages-cell">
+                  <p>Высота потолков: <b>3,0 м</b></p>
+                </div>
               </li>
               <li>
-                <img src="img/icon-lg5.png" alt="">
-                <p>Отделка: <b>Предчистовая</b></p>
+                <div class="page-section__advantages-cell">
+                  <img src="img/icon-lg5.png" alt="">
+                </div>
+                <div class="page-section__advantages-cell">
+                  <p>Отделка: <b>Предчистовая</b></p>
+                </div>
               </li>
               <li>
-                <img src="img/icon-lg6.png" alt="">
-                <p>Паркинг: <b>Подземный</b></p>
+                <div class="page-section__advantages-cell">
+                  <img src="img/icon-lg6.png" alt="">
+                </div>
+                <div class="page-section__advantages-cell">
+                  <p>Паркинг: <b>Подземный</b></p>
+                </div>
               </li>
               <li>
-                <img src="img/icon-lg7.png" alt="">
-                <p>Сдача комплекса: <b>III кв. 2024</b></p>
+                <div class="page-section__advantages-cell">
+                  <img src="img/icon-lg7.png" alt="">
+                </div>
+                <div class="page-section__advantages-cell">
+                  <p>Сдача комплекса: <b>III кв. 2024</b></p>
+                </div>
               </li>
               <li>
-                <img src="img/icon-lg8.png" alt="">
-                <p>Класс: <b>Премиум</b></p>
+                <div class="page-section__advantages-cell">
+                  <img src="img/icon-lg8.png" alt="">
+                </div>
+                <div class="page-section__advantages-cell">
+                  <p>Класс: <b>Премиум</b></p>
+                </div>
               </li>
               <li>
-                <img src="img/icon-lg9.png" alt="">
-                <p>Тип жилья: <b>Апартаменты</b></p>
+                <div class="page-section__advantages-cell">
+                  <img src="img/icon-lg9.png" alt="">
+                </div>
+                <div class="page-section__advantages-cell">
+                  <p>Тип жилья: <b>Апартаменты</b></p>
+                </div>
               </li>
               <li>
-                <img src="img/icon-lg10.png" alt="">
-                <p>Девелопер: <b>СЗ ЛОГОС</b></p>
+                <div class="page-section__advantages-cell">
+                  <img src="img/icon-lg10.png" alt="">
+                </div>
+                <div class="page-section__advantages-cell">
+                  <p>Девелопер: <b>СЗ ЛОГОС</b></p>
+                </div>
               </li>
             </ul>
           </div>
