--- a/index.html
+++ b/index.html
@@ -245,12 +245,14 @@
       <div class="page-section__img-wrap">
         <img src="img/img3.jpg" alt="">
       </div>
-      <div class="page-section__img-row">
-        <div class="page-section__img-sm">
-          <img src="img/img4.jpg" alt="">
-        </div>
-        <div class="page-section__img-sm">
-          <img src="img/img5.jpg" alt="">
+      <div class="page-section__img-table">
+        <div class="page-section__img-row">
+          <div class="page-section__img-sm">
+            <img src="img/img4.jpg" alt="">
+          </div>
+          <div class="page-section__img-sm">
+            <img src="img/img5.jpg" alt="">
+          </div>
         </div>
       </div>
       <div class="page-section__text-content">
