--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <div class="wrapper">
   <div class="page-section page-section--intro">
     <div class="page-section__inner">
+      <div class="page-section__img-wrap">
+        <img src="img/intro-rc.png" alt="Жилой комплекс Logos">
+      </div>
       <h1>Жилой комплекс <br><b>Logos</b></h1>
     </div>
   </div>
