--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
 <div class="wrapper">
   <div class="page-section page-section--intro">
     <div class="page-section__inner">
-      <div class="page-section__img-wrap">
+      <div class="page-section__intro-img">
         <img src="img/intro-rc.png" alt="Жилой комплекс Logos">
       </div>
-      <h1>Жилой комплекс <br><b>Logos</b></h1>
+      <h1 class="page-section__intro-title">Жилой комплекс <br><b>Logos</b></h1>
+      <div class="page-section__intro-footer">
+        <a href="https://www.kalinka-realty.ru/" target="_blank">
+          <img class="page-section__intro-logo" src="img/logo.png" alt="Kalinka Group" width="175" height="137">
+        </a>
+      </div>
     </div>
   </div>
   <div class="page-delimiter"></div>
