--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
         <img src="img/main-1.jpg" alt="Жилой комплекс Logos">
       </div>
       <div class="page-section__text-content">
-        <h1 class="page-section__title">Жилой комплекс Logos</h1>
-        <address class="page-section__address">Россия, Москва, Даниловский Вал ул., д. 1А</address>
-        <p class="page-section__address-detail"><b>Район:</b> Даниловский <b>Метро:</b> «Тульская»</p>
+        <div class="page-section__text-head">
+          <h2 class="page-section__title">Жилой комплекс Logos</h2>
+          <address class="page-section__address">Россия, Москва, Даниловский Вал ул., д. 1А</address>
+          <p class="page-section__address-detail"><b>Район:</b> Даниловский <b>Метро:</b> «Тульская»</p>
+        </div>
         <div class="page-section__about">
           <div class="page-section__about-row">
             <div class="page-section__about-item">
