--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body>
 <div class="wrapper">
-  <div class="page-section page-section--intro">
-    <div class="page-section__inner">
+  <div class="page-section">
+    <div class="page-section__inner page-section__inner--intro">
       <div class="page-section__intro-img">
         <img src="img/intro-rc.png" alt="Жилой комплекс Logos">
       </div>
@@ -147,26 +147,10 @@
               </li>
               <li>
                 <div class="page-section__advantages-cell">
-                  <img src="img/icon-lg8.png" alt="">
-                </div>
-                <div class="page-section__advantages-cell">
-                  <p>Класс: <b>Премиум</b></p>
-                </div>
-              </li>
-              <li>
-                <div class="page-section__advantages-cell">
                   <img src="img/icon-lg9.png" alt="">
                 </div>
                 <div class="page-section__advantages-cell">
                   <p>Тип жилья: <b>Апартаменты</b></p>
-                </div>
-              </li>
-              <li>
-                <div class="page-section__advantages-cell">
-                  <img src="img/icon-lg10.png" alt="">
-                </div>
-                <div class="page-section__advantages-cell">
-                  <p>Девелопер: <b>СЗ ЛОГОС</b></p>
                 </div>
               </li>
             </ul>
@@ -362,10 +346,10 @@
   <div class="page-delimiter"></div>
   <div class="page-section">
     <div class="page-section__inner">
-      <div class="page-section__img-wrap">
+      <div class="page-section__img-wrap page-section__img-wrap--md">
         <img src="img/img6.jpg" alt="">
       </div>
-      <div class="page-section__img-wrap">
+      <div class="page-section__img-wrap page-section__img-wrap--md">
         <img src="img/img7.jpg" alt="">
       </div>
     </div>
